# app-a-day-cert-mgmt-system

./: .gitignore  architecture-plan.md
certificate-management-system/: .devenv  .envrc  .gitignore  README.md  default.nix  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  monitoring-README.md  process-compose.yaml  shell.nix
certificate-management-system/backend/: .gitignore  README.md  check_imports.py  diagnose.py  diagnose.sh  pyproject.toml  requirements.txt  run.sh  test_certificate_generation.py
certificate-management-system/backend/alembic/: env.py
certificate-management-system/backend/alembic/versions/: f315dbcef182_.py
certificate-management-system/backend/app/: main.py
certificate-management-system/backend/app/api/: __init__.py  certificates.py
certificate-management-system/backend/app/core/: config.py  security.py
certificate-management-system/backend/app/db/: session.py
certificate-management-system/backend/app/models/: certificate.py
certificate-management-system/backend/app/schemas/: certificate.py
certificate-management-system/backend/app/services/: certificate_service.py
certificate-management-system/backend/tests/: conftest.py  test_certificate_service.py  test_certificates.py
certificate-management-system/grafana/dashboards/: postgres.json
certificate-management-system/macos-app/: README.md  package.json
certificate-management-system/macos-app/src/: App.js
certificate-management-system/macos-app/src/screens/: CertificateDetailScreen.js  CertificateListScreen.js
certificate-management-system/macos-app/src/services/: api.js
certificate-management-system/prometheus/: prometheus.yml
certificate-management-system/web-frontend/: README.md  package-lock.json  package.json
certificate-management-system/web-frontend/public/: index.html  manifest.json
certificate-management-system/web-frontend/src/: App.js  index.css
certificate-management-system/web-frontend/src/components/: Navigation.js
certificate-management-system/web-frontend/src/pages/: CertificateCreate.js  CertificateDetail.js  CertificateEdit.js  (+2 more)
otel/: otel-collector-config.yaml
(+1 files in other folders)
