[tool.poetry]
name = "certificate-management-system-backend"
version = "0.1.0"
description = "Backend service for managing X509 certificates"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
pydantic = "^1.10.7"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pyopenssl = "^23.1.1"
cryptography = "^40.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
certificate-management-system-backend = "app.main:app"