[tool.poetry]
name = "certificate-management-system-backend"
version = "0.1.0"
description = "Backend service for managing X509 certificates"
authors = ["John Rizzo <johnrizzo1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
alembic = "^1.10.3"
cryptography = "^43.0.1"
fastapi = "^0.95.0"
greenlet = "^3.0.3"
hypercorn = "^0.15.0"
opentelemetry-api = "^1.30.0"
opentelemetry-exporter-otlp = "^1.30.0"
opentelemetry-exporter-prometheus = "^0.51b0"
opentelemetry-instrumentation = "^0.51b0"
opentelemetry-instrumentation-fastapi = "^0.51b0"
opentelemetry-sdk = "^1.30.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.6"
pydantic = "^1.10.7"
python = "^3.12"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
certificate-management-system-backend = "app.main:app"